+ improved proxy class generation + more blueprint fixes
git-svn-id: https://src.springframework.org/svn/spring-osgi/trunk@2244 2e8e966d-6415-0410-94b9-dc4e65435d03